[project]
name = "ppo-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gym==0.22.0",
    "huggingface-hub>=0.27.0",
    "imageio>=2.36.1",
    "imageio-ffmpeg>=0.5.1",
    "pygame>=2.6.1",
    "swig>=4.3.0",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "wasabi>=1.1.3",
]
